<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WalletRestoreDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restore_wallet_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax" />

<!--   select file result     -->
        <com.xuexiang.xui.widget.textview.autofit.AutoFitTextView
            android:id="@+id/import_keys_from_storage_file_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:text="@string/pls_select_wallet_file"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />


        <com.xuexiang.xui.widget.edittext.PasswordEditText
            android:id="@+id/import_keys_from_storage_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/import_export_keys_dialog_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/restore_wallet_from_storage_dialog_replace_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax"
            android:text="@string/restore_wallet_dialog_replace_warning"
            android:textColor="@color/fg_less_significant"
            android:textSize="@dimen/font_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical_lax"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax"
            android:text="@string/import_keys_dialog_warning"
            android:textColor="@color/fg_less_significant"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</ScrollView>