<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--        android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"-->
<!--        android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:text="@string/encrypt_keys_dialog_message" />

        <LinearLayout
            android:id="@+id/encrypt_keys_dialog_password_old_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/list_entry_padding_vertical"
            android:divider="@drawable/divider_field"
            android:orientation="horizontal"
            android:showDividers="middle" >

            <com.xuexiang.xui.widget.edittext.PasswordEditText
                android:id="@+id/encrypt_keys_dialog_password_old"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/encrypt_keys_dialog_password_old"
                android:imeOptions="flagNoExtractUi"
                android:inputType="numberPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/encrypt_keys_dialog_bad_password"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/private_key_bad_password"
                android:textColor="@color/fg_error"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_entry_padding_vertical"
        android:divider="@drawable/divider_field"
        android:orientation="horizontal"
        android:showDividers="middle" >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textDirection="locale">

            <com.xuexiang.xui.widget.edittext.PasswordEditText
                android:id="@+id/encrypt_keys_dialog_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/private_key_password"
                android:inputType="numberPassword"
                android:layoutDirection="locale"
                android:textAlignment="viewStart"
                app:pet_enableIconAlpha="true"
                app:pet_isAsteriskStyle="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/encrypt_keys_dialog_password_strength"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_entry_padding_vertical_lax"
            android:layout_marginTop="@dimen/list_entry_padding_vertical_lax"
            android:text="@string/encrypt_keys_dialog_warning"
            android:textColor="@color/fg_less_significant"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</ScrollView>